67_Bugfix ContactCard.jsx Mobile Wrapping Fix

--- a/UrFriends/src/index.css
+++ b/UrFriends/src/index.css
@@ -275,7 +275,8 @@ body {
   cursor: pointer;
   background-color: var(--light-base-color);
   border: none;
-  box-shadow: inset 2px 2px 4px  rgba(0, 0, 0, 0.6), inset -1px -1px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.6),
+    inset -1px -1px 6px rgba(0, 0, 0, 0.2);
 }
 
 .action-button:hover {
@@ -603,8 +604,26 @@ body {
   }
 
   .contact-expanded-name-phone-email {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     grid-area: 1 / 1 / 2 / 2;
   }
+
+  .ce-name {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  
+  .ce-number {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  
+  .ce-email {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  
 
   .contact-name-and-last-cont-div {
     grid-area: 1 / 2 / 2 / 5;
